@@ -14,6 +14,7 @@
         <platform>all</platform>
         <news>
 2.3.4
+[fix] clean_title_value UnicodeDecodeError
 [fix] Game titles UnicodeEncodeError
 [fix] python 3 compat. urllib.quote_plus
 
