@@ -1,4 +1,5 @@
 2.3.4
+[fix] clean_title_value UnicodeDecodeError
 [fix] Game titles UnicodeEncodeError
 [fix] python 3 compat. urllib.quote_plus
 
